# flash-arb-bot

./: .gitignore  .tool-versions  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
config/: bot.toml
infra/: anvil.service
rust/executor/: Cargo.toml  Dockerfile
rust/executor/src/: main.rs  run_loop.rs
scripts/: fork_daemon.sh  gas_guard.sh  setup_local_anvil.sh
