[package]
name = "flash-arb-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
log = "0.4"
env_logger = "0.10"
notify = "5.0"
signal-hook = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["http1"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23", features = ["tokio-comp"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"
futures-util = "0.3"
